--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 ---
 language: ruby
 rvm:
-  - 1.9.3
-  - jruby-19mode # JRuby in 1.9 mode
-  - rbx-2.1.1
+  - 2.1.0
+  - 2.0.0
+  - ruby-head
+  - jruby-head
+  - rbx
